--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,14 @@
-title: APIs.io - Travel
-url: http://127.0.0.1:4000
+name: APIs.io - Travel
+description: The APIs that make travel possible, as well as a number of other related capabilities.
+image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+
+url: https://travel.apis.io
 
 node: travel
+
+keywords:
+
+- Travel
 
 permalink: /:categories/:year/:month/:day/:title/
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
