--- a/_data/expedia/overlays/apis-io-search.yml
+++ b/_data/expedia/overlays/apis-io-search.yml
@@ -1,90 +1,380 @@
----
-name: Expedia Group
+name: Amadeus
 description: >-
-  Expedia Group, Inc. is an American travel technology company that owns and operates travel fare aggregators and travel metasearch engines, including Expedia, Hotels.com, Vrbo, Travelocity, Hotwire.com, Orbitz, Ebookers, CheapTickets, CarRentals.com, Expedia Cruises, Wotif, and Trivago.
-image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-url: https://raw.githubusercontent.com/api-search/travel/main/apis/expedia-group.yml
-created: 2024-06-07
-modified:  2024-06-07
+  Leverage the full potential of travel data with Amadeus Travel APIs. Get
+  instant access to over 400 airlines, 150,000 hotels, 300,000 tours &
+  activities, and more. Whether you are a developer, a startup or a leading
+  travel brand, Amadeus APIs enable you to play, innovate, create high-quality
+  apps and deliver them to the market quickly.
+url: https://raw.githubusercontent.com/apis-json/artisanal/main/apis/amadeus.yml
+created: 2024/04/14
+modified: '2024-07-03'
 specificationVersion: '0.18'
-tags: []
+tags:
+  - Travel
 apis:
-  - aid: expedia-group:rapid
-    name: Expedia Rapid
+  - aid: amadeus:airline-routes
+    name: Airline Routes
     description: Needs a description
-    image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-    humanURL: https://developers.expediagroup.com/docs/products/rapid
-    baseURL: https://api.example.com
     tags: []
-    properties:
-      - type: Documentation
-        url: https://developers.expediagroup.com/docs/products/rapid
-      - type: OpenAPI
-        url: properties/expedia-rapid-openapi-original.yaml
-  - aid: expedia-group:loyalty
-    name: Expedia Loyalty
+    overlays:
+      - type: APIs.io Search
+        url: overlays/airline-routes-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/airline-routes-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:airport-city-search
+    name: Airport & City Search
     description: Needs a description
-    image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-    humanURL: https://developers.expediagroup.com/docs/products/analytics
-    baseURL: https://api.example.com
     tags: []
-    properties:
-      - type: Documentation
-        url: https://developers.expediagroup.com/docs/products/analytics
-      - type: OpenAPI
-        url: properties/expedia-loyalty-openapi-original.yaml   
-  - aid: expedia-group:fraud-protection
-    name: Expedia Fraud Protection
+    overlays:
+      - type: APIs.io Search
+        url: overlays/airport-city-search-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/airport-city-search-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:airport-nearest-relevant
+    name: Airport Nearest Relevant
     description: Needs a description
-    image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-    humanURL: https://developers.expediagroup.com/docs/products/fraud-prevention
-    baseURL: https://api.example.com
     tags: []
-    properties:
-      - type: Documentation
-        url: https://developers.expediagroup.com/docs/products/fraud-prevention
-      - type: OpenAPI
-        url: properties/expedia-fraud-protection-openapi-original.yaml  
-  - aid: expedia-group:deposit
-    name: Expedia Deposit API
+    overlays:
+      - type: APIs.io Search
+        url: overlays/airport-nearest-relevant-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/airport-nearest-relevant-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:airport-on-time-performance
+    name: Airport On-Time Performance
     description: Needs a description
-    image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-    humanURL: https://developers.expediagroup.com/supply/lodging/docs/property_mgmt_apis/deposit/getting_started/introduction/
-    baseURL: https://api.example.com
     tags: []
-    properties:
-      - type: Documentation
-        url: https://developers.expediagroup.com/supply/lodging/docs/property_mgmt_apis/deposit/getting_started/introduction/
-      - type: OpenAPI
-        url: properties/expedia-deposit-openapi-original.yml                    
-  - aid: expedia-group:deposit
-    name: Expedia Lodging API
+    overlays:
+      - type: APIs.io Search
+        url: overlays/airport-on-time-performance-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: >-
+          overlays/airport-on-time-performance-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:airport-routes
+    name: Airport Routes
     description: Needs a description
-    image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-    humanURL: https://developers.expediagroup.com/supply/lodging
-    baseURL: https://api.example.com
     tags: []
-    properties:
-      - type: Documentation
-        url: https://developers.expediagroup.com/supply/lodging
-      - type: OpenAPI
-        url: properties/expedia-lodging-product-openapi-original.yml     
-common:
-  - type: Portal
-    url: https://developers.expediagroup.com/docs/
-  - type: SDK
-    url: https://developers.expediagroup.com/docs/sdk
-  - type: Blog
-    url: https://medium.com/expedia-group-tech
-  - type: Support
-    url: https://developers.expediagroup.com/docs/support           
-  - type: Status
-    url: https://status.developers.expediagroup.com/      
+    overlays:
+      - type: APIs.io Search
+        url: overlays/airport-routes-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/airport-routes-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:amadeus-oauth2-login
+    name: Amadeus OAuth2 Login
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/amadeus-oauth2-login-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/amadeus-oauth2-login-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:branded-fares-upsell
+    name: Branded Fares Upsell
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/branded-fares-upsell-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/branded-fares-upsell-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:city-search
+    name: City Search
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/city-search-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/city-search-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-availibilities-search
+    name: Flight Availibilities Search
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-availibilities-search-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: >-
+          overlays/flight-availibilities-search-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-busiest-traveling-period
+    name: Flight Busiest Traveling Period
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-busiest-traveling-period-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: >-
+          overlays/flight-busiest-traveling-period-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-cheapest-date-search
+    name: Flight Cheapest Date Search
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-cheapest-date-search-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: >-
+          overlays/flight-cheapest-date-search-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-check-in-links
+    name: Flight Check-in Links
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-check-in-links-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-check-in-links-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-choice-prediction
+    name: Flight Choice Prediction
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-choice-prediction-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-choice-prediction-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-create-orders
+    name: Flight Create Orders
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-create-orders-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-create-orders-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-delay-prediction
+    name: Flight Delay Prediction
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-delay-prediction-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-delay-prediction-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-inspiration-search
+    name: Flight Inspiration Search
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-inspiration-search-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-inspiration-search-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-most-booked-destinations
+    name: Flight Most Booked Destinations
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-most-booked-destinations-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: >-
+          overlays/flight-most-booked-destinations-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-most-traveled-destinations
+    name: Flight Most Traveled Destinations
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-most-traveled-destinations-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: >-
+          overlays/flight-most-traveled-destinations-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-offers-price
+    name: Flight Offers Price
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-offers-price-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-offers-price-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-offers-search
+    name: Flight Offers Search
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-offers-search-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-offers-search-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-order-management
+    name: Flight Order Management
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-order-management-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-order-management-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:flight-price-analysis
+    name: Flight Price Analysis
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/flight-price-analysis-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/flight-price-analysis-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:hotel-booking
+    name: Hotel Booking
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/hotel-booking-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/hotel-booking-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:hotel-list
+    name: Hotel List
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/hotel-list-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/hotel-list-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:hotel-name-autocomplete
+    name: Hotel Name Autocomplete
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/hotel-name-autocomplete-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/hotel-name-autocomplete-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:hotel-ratings
+    name: Hotel Ratings
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/hotel-ratings-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/hotel-ratings-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:hotel-search
+    name: Hotel Search
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/hotel-search-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/hotel-search-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:location-score
+    name: Location Score
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/location-score-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/location-score-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:on-demand-flight-status
+    name: On-Demand Flight Status
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/on-demand-flight-status-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/on-demand-flight-status-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:points-of-interest
+    name: Points of Interest
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/points-of-interest-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/points-of-interest-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:safe-place
+    name: Safe Place
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/safe-place-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/safe-place-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:seatmap-display
+    name: Seatmap Display
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/seatmap-display-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/seatmap-display-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:tours-and-activities
+    name: Tours and Activities
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/tours-and-activities-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/tours-and-activities-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:transfer-booking
+    name: Transfer Booking
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/transfer-booking-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/transfer-booking-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:transfer-management
+    name: Transfer Management
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/transfer-management-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/transfer-management-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:transfer-search
+    name: Transfer Search
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/transfer-search-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/transfer-search-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:travel-recommendations
+    name: Travel Recommendations
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/travel-recommendations-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/travel-recommendations-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:trip-parser
+    name: Trip Parser
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/trip-parser-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/trip-parser-openapi-api-evangelist-ratings.yml
+  - aid: amadeus:trip-purpose-prediction
+    name: Trip Purpose Prediction
+    description: Needs a description
+    tags: []
+    overlays:
+      - type: APIs.io Search
+        url: overlays/trip-purpose-prediction-openapi-search.yml
+      - type: API Evangelist Ratings
+        url: overlays/trip-purpose-prediction-openapi-api-evangelist-ratings.yml
 maintainers:
   - FN: API Evangelist
     url: http://apievangelist.com
     email: info@apievangelist.com
+aid: expedia-group
+score: 164
 overlays:
-  - type: APIs.io Search
+  - type: API Evangelist Ratings
     url: overlays/apis-io-search.yml
-aid: amadeus
