Saving OpenAPI Overlay

--- a/_data/octo/overlays/apis-io-search.yml
+++ b/_data/octo/overlays/apis-io-search.yml
@@ -61,4 +61,7 @@ maintainers:
 overlays:
   - type: APIs.io Search
     url: overlays/apis-io-search.yml
+  - type: API Evangelist Ratings
+    url: /overlays/api-evangelist-ratings.yml
 aid: amadeus
+score: 40
