--- a/_data/expedia-group/overlays/apis-io-search.yml
+++ b/_data/expedia-group/overlays/apis-io-search.yml
@@ -5,8 +5,7 @@ description: >-
   Expedia, Hotels.com, Vrbo, Travelocity, Hotwire.com, Orbitz, Ebookers,
   CheapTickets, CarRentals.com, Expedia Cruises, Wotif, and Trivago.
 image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-url: >-
-  https://raw.githubusercontent.com/api-search/travel/main/apis/expedia-group.yml
+url: https://raw.githubusercontent.com/api-search/travel/main/_data/expedia-group/overlays/apis-io-search.yml
 created: '2024-06-07T00:00:00.000Z'
 modified: '2024-07-04'
 specificationVersion: '0.18'
